Fixing signature on Mobile view

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h2 {
 
 h3 {
     font-family: 'Dancing Script', cursive;
-    font-size: 36px;
+    font-size: 34px;
 }
 
 h4 {
